// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders with choicePrefix="letters" as default 1`] = `
<WithStyles(Component)
  classes={Object {}}
  model={
    Object {
      "choiceMode": "checkbox",
      "choicePrefix": "letters",
      "choices": Array [
        Object {
          "correct": true,
          "feedback": Object {
            "type": "none",
            "value": "",
          },
          "label": "Sweden",
          "value": "sweden",
        },
        Object {
          "feedback": Object {
            "type": "none",
            "value": "",
          },
          "label": "Iceland",
          "value": "iceland",
        },
        Object {
          "feedback": Object {
            "type": "none",
            "value": "",
          },
          "label": "Norway",
          "value": "norway",
        },
        Object {
          "correct": true,
          "feedback": Object {
            "type": "none",
            "value": "",
          },
          "label": "Finland",
          "value": "finland",
        },
      ],
      "choicesLayout": "vertical",
      "configure": Object {},
      "feedbackEnabled": true,
      "gridColumns": "2",
      "limitChoicesNumber": true,
      "lockChoiceOrder": true,
      "partialScoring": false,
      "prompt": "Which of these northern European countries are EU members?",
      "promptEnabled": true,
      "rationaleEnabled": true,
      "scoringType": "auto",
      "studentInstructionsEnabled": true,
      "teacherInstructionsEnabled": true,
      "toolbarEditorPosition": "bottom",
      "verticalMode": true,
    }
  }
  onAddChoice={[Function]}
  onChangeModel={[Function]}
  onChoiceChanged={[Function]}
  onConfigurationChanged={[MockFunction]}
  onModelChanged={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "choiceMode": "checkbox",
            "choicePrefix": "numbers",
            "choices": Array [
              Object {
                "correct": true,
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Sweden",
                "value": "sweden",
              },
              Object {
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Iceland",
                "value": "iceland",
              },
              Object {
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Norway",
                "value": "norway",
              },
              Object {
                "correct": true,
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Finland",
                "value": "finland",
              },
            ],
            "choicesLayout": "vertical",
            "configure": Object {},
            "feedbackEnabled": true,
            "gridColumns": "2",
            "limitChoicesNumber": true,
            "lockChoiceOrder": true,
            "partialScoring": false,
            "prompt": "Which of these northern European countries are EU members?",
            "promptEnabled": true,
            "rationaleEnabled": true,
            "scoringType": "auto",
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
            "verticalMode": true,
          },
        ],
        Array [
          Object {
            "choiceMode": "checkbox",
            "choicePrefix": "letters",
            "choices": Array [
              Object {
                "correct": true,
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Sweden",
                "value": "sweden",
              },
              Object {
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Iceland",
                "value": "iceland",
              },
              Object {
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Norway",
                "value": "norway",
              },
              Object {
                "correct": true,
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Finland",
                "value": "finland",
              },
            ],
            "choicesLayout": "vertical",
            "configure": Object {},
            "feedbackEnabled": true,
            "gridColumns": "2",
            "limitChoicesNumber": true,
            "lockChoiceOrder": true,
            "partialScoring": false,
            "prompt": "Which of these northern European countries are EU members?",
            "promptEnabled": true,
            "rationaleEnabled": true,
            "scoringType": "auto",
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
            "verticalMode": true,
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onPromptChanged={[Function]}
  onRemoveChoice={[Function]}
  onTeacherInstructionsChanged={[Function]}
/>
`;

exports[`Main snapshot renders with choicePrefix="numbers" 1`] = `
<WithStyles(Component)
  classes={Object {}}
  model={
    Object {
      "choiceMode": "checkbox",
      "choicePrefix": "numbers",
      "choices": Array [
        Object {
          "correct": true,
          "feedback": Object {
            "type": "none",
            "value": "",
          },
          "label": "Sweden",
          "value": "sweden",
        },
        Object {
          "feedback": Object {
            "type": "none",
            "value": "",
          },
          "label": "Iceland",
          "value": "iceland",
        },
        Object {
          "feedback": Object {
            "type": "none",
            "value": "",
          },
          "label": "Norway",
          "value": "norway",
        },
        Object {
          "correct": true,
          "feedback": Object {
            "type": "none",
            "value": "",
          },
          "label": "Finland",
          "value": "finland",
        },
      ],
      "choicesLayout": "vertical",
      "configure": Object {},
      "feedbackEnabled": true,
      "gridColumns": "2",
      "limitChoicesNumber": true,
      "lockChoiceOrder": true,
      "partialScoring": false,
      "prompt": "Which of these northern European countries are EU members?",
      "promptEnabled": true,
      "rationaleEnabled": true,
      "scoringType": "auto",
      "studentInstructionsEnabled": true,
      "teacherInstructionsEnabled": true,
      "toolbarEditorPosition": "bottom",
      "verticalMode": true,
    }
  }
  onAddChoice={[Function]}
  onChangeModel={[Function]}
  onChoiceChanged={[Function]}
  onConfigurationChanged={[MockFunction]}
  onModelChanged={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "choiceMode": "checkbox",
            "choicePrefix": "numbers",
            "choices": Array [
              Object {
                "correct": true,
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Sweden",
                "value": "sweden",
              },
              Object {
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Iceland",
                "value": "iceland",
              },
              Object {
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Norway",
                "value": "norway",
              },
              Object {
                "correct": true,
                "feedback": Object {
                  "type": "none",
                  "value": "",
                },
                "label": "Finland",
                "value": "finland",
              },
            ],
            "choicesLayout": "vertical",
            "configure": Object {},
            "feedbackEnabled": true,
            "gridColumns": "2",
            "limitChoicesNumber": true,
            "lockChoiceOrder": true,
            "partialScoring": false,
            "prompt": "Which of these northern European countries are EU members?",
            "promptEnabled": true,
            "rationaleEnabled": true,
            "scoringType": "auto",
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
            "verticalMode": true,
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onPromptChanged={[Function]}
  onRemoveChoice={[Function]}
  onTeacherInstructionsChanged={[Function]}
/>
`;
